"Save Advance Filters"  functionality implemented in Lineup Optimizer.

--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.css
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.css
@@ -6,8 +6,12 @@ img {
 }
 
 section.my-section {
-  padding: 15px ;
+  padding: 15px;
   margin-left: -15px;
   margin-right: -15px;
-  margin-bottom: 1px ;
+  margin-bottom: 1px;
+}
+
+a .disabled {
+  opacity: 0.4;
 }
