--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -20,16 +20,18 @@
 
       <!-- Modal Body -->
       <div class="modal-body">
-        <!--<div class="row row30">
+        <div class="row row30">
           <div class="col-lg-12 text-center yellow-container">
-            <a class="btn btn-link btn-link-back"><img src="../../../../../assets/img/save_general_n.png"/> Save General
+            <a class="btn btn-link btn-link-back" (click)="onBtnSaveAdvFilterValueClicked()" [class.disabled]="!isSettingsUpdated"><img
+              src="../../../../../assets/img/save_general_n.png"/> Save
               Settings</a>
-            <a class="btn btn-link btn-link-back"><img src="../../../../../assets/img/load_saved_n.png"/> Load Saved
-              Settings</a>
-            <a class="btn btn-link btn-link-back"><img src="../../../../../assets/img/restore_n.png"/> Restore Default
-              Settings</a>
+            <!--<a class="btn btn-link btn-link-back"><img src="../../../../../assets/img/load_saved_n.png"/> Load Saved
+              Settings</a>-->
+            <a class="btn btn-link btn-link-back" (click)="onBtnRestoreDefaultClicked()"><img
+              src="../../../../../assets/img/restore_n.png"/> Restore
+              Default</a>
           </div>
-        </div>-->
+        </div>
         <div class="row">
           <div class="col-lg-12">
             <!-- Tab panes -->
@@ -78,8 +80,9 @@
                       <h4 class="rangeslider-value">Min/Max Salary:
                         <span id="mmsSliderVal">{{salarySettingValue[0]}}-{{salarySettingValue[1]}}</span></h4>
                       <input id="mms" type="text"/>
-                      <span class="slider-range slider-min">{{salarySettingValue[0]}}</span><span
-                      class="slider-range slider-max">{{salarySettingValue[1]}}</span>
+                      <span
+                        class="slider-range slider-min">{{selectedOperator == 'FanDuel' ? 20000 : 30000}}</span><span
+                      class="slider-range slider-max">{{selectedOperator == 'FanDuel' ? 35000 : 50000}}</span>
                     </div>
                   </div>
                   <div class="col-md-6">
