Indicator for "applied filter" is added on setting button. "Clear settings and restore default"  butting added in filter popup.

--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -25,10 +25,8 @@
             <a class="btn btn-link btn-link-back" (click)="onBtnSaveAdvFilterValueClicked()" [class.disabled]="!isSettingsUpdated"><img
               src="../../../../../assets/img/save_general_n.png"/> Save
               Settings</a>
-            <!--<a class="btn btn-link btn-link-back"><img src="../../../../../assets/img/load_saved_n.png"/> Load Saved
-              Settings</a>-->
             <a class="btn btn-link btn-link-back" (click)="onBtnRestoreDefaultClicked()"><img
-              src="../../../../../assets/img/restore_n.png"/> Restore
+              src="../../../../../assets/img/restore_n.png"/>Clear Settings and Restore
               Default</a>
           </div>
         </div>
