--- a/src/app/front/components/lineup-optimizer/lineup-optimizer.component.css
+++ b/src/app/front/components/lineup-optimizer/lineup-optimizer.component.css
@@ -34,3 +34,22 @@ section.my-section {
   border-bottom: none;
   padding: 8px 10px;
 }
+
+.setting-btn {
+  position: relative;
+}
+
+.setting-btn a.active{
+  background: #000;
+  border-color: #000;
+}
+
+#active-filter-dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  position: absolute;
+  right: -3px;
+  top: -10px;
+  background: #F44336;
+}
