- Text changes updated

--- a/src/app/front/components/extensions/extensions.component.html
+++ b/src/app/front/components/extensions/extensions.component.html
@@ -18,9 +18,9 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <h1 class="bowerHedin">
-          The Gods DraftKings & FanDuel Google Chrome Extension
+          The RotoPros DraftKings & FanDuel Google Chrome Extension
         </h1>
-        <p class="bowerSecHedin">DOWNLOAD THE DF SPORTS GODS EXTENSION FOR GOOGLE CHROME</p>
+        <p class="bowerSecHedin">DOWNLOAD THE ROTOPROS EXTENSION FOR GOOGLE CHROME</p>
 
         <a target="_blank" href="https://chrome.google.com/webstore/detail/draftkingsfanduel-tools/oiimipecejocdcbiedlbabkgmldkjhma" class="bowerDwnBtn">Download</a>
       </div>
@@ -37,7 +37,7 @@
             <img src="../../../../assets/images/extension.jpg" alt="" class="img-responsive">
           </div>
           <div class="bowerSection2Rght">
-            <p class="bowerPara">The Gods have created a game changing Google Chrome extension that seamlessly integrates with your Google Chrome Browser. Simply click the link below to visit the Chrome Web Store to install the extension.</p>
+            <p class="bowerPara">The RotoPros have created a game changing Google Chrome extension that seamlessly integrates with your Google Chrome Browser. Simply click the link below to visit the Chrome Web Store to install the extension.</p>
 
             <p class="bowerPara">When you sign-in to your DraftKings account, log-in to the yellow menu on the left and gain access to The Gods Google Chrome features that are perfectly in sync automatically with your DraftKings account.</p>
 
@@ -55,7 +55,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-        <p class="bowerHedin">DOWNLOAD THE DF SPORTS GODS EXTENSION FOR GOOGLE CHROME :</p>
+        <p class="bowerHedin">DOWNLOAD THE ROTOPROS EXTENSION FOR GOOGLE CHROME :</p>
 
         <ul>
           <li><span>Built-in Bankroll Management - </span>enter your bankroll and we recommend insights in the most favorable games</li>
