--- a/src/app/front/components/faq/faq.component.html
+++ b/src/app/front/components/faq/faq.component.html
@@ -24,13 +24,13 @@
               <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <i class="more-less glyphicon glyphicon-minus"></i>
-                  WELCOME NEW MEMBERS TO DF SPORTS GODS!
+                  WELCOME NEW MEMBERS TO ROTOPROS!
                 </a>
               </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-                <p> Step one is become a VIP Member of DF Sports Gods if you have not already. To become a member, click on the button below to sign-up:</p>
+                <p> Step one is become a VIP Member of RotoPros if you have not already. To become a member, click on the button below to sign-up:</p>
                 <a href="signup.html" class="faqSignUpBtn">Sign Up</a>
               </div>
             </div>
@@ -47,7 +47,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
-                <p>You just signed up to receive profitable daily fantasy lineups and you may be wondering where you receive the lineups each day and how the site works. As a VIP member of DF Sports Gods, you receive an all access membership which includes lineups for DraftKings and FanDuel. You have access to lineups for nfl, mlb, nhl, nba, as well as lineups for epl, ucl, mma and nascar. You will also have access to a slate breakdown article and cheat sheet for nba highlighting our top nba play of that day for cash games and tournaments. The articles and cheat sheet are available six days a week!</p>
+                <p>You just signed up to receive profitable daily fantasy lineups and you may be wondering where you receive the lineups each day and how the site works. As a VIP member of RotoPros, you receive an all access membership which includes lineups for DraftKings and FanDuel. You have access to lineups for nfl, mlb, nhl, nba, as well as lineups for epl, ucl, mma and nascar. You will also have access to a slate breakdown article and cheat sheet for nba highlighting our top nba play of that day for cash games and tournaments. The articles and cheat sheet are available six days a week!</p>
               </div>
             </div>
           </div>
@@ -103,7 +103,7 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
-                <p>Our customer support team will respond to all inquiries, questions and comments between the hours of 7am to 12am. When you email submit a question to us dfsportsgods.com/contact-us we will reply during hours of operations. </p>
+                <p>Our customer support team will respond to all inquiries, questions and comments between the hours of 7am to 12am. When you email submit a question to us, we will reply during hours of operations. </p>
               </div>
             </div>
           </div>
@@ -168,9 +168,9 @@
             </div>
             <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
               <div class="panel-body">
-                <p>Yes, DF Sports Gods has a dedicated person that is always available to help answer your questions about daily fantasy, bankroll management and game selection.</p>
+                <p>Yes, RotoPros Gods has a dedicated person that is always available to help answer your questions about daily fantasy, bankroll management and game selection.</p>
 
-                <p>Thank you again for signing up for DF Sports Gods! Now that you know about us and were to find the lineups we look forward to meeting you and providing you with consistent winning daily fantasy sports lineups. We look forward to seeing you in our slack soon.</p>
+                <p>Thank you again for signing up for RotoPros! Now that you know about us and were to find the lineups we look forward to meeting you and providing you with consistent winning daily fantasy sports lineups. We look forward to seeing you in our slack soon.</p>
 
                 <p>Lets win together!</p>
               </div>
