--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -60,7 +60,7 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a target="_blank" href="http://forum.rotopros.com/">Forums</a>
               </li>
-              <li><a>Products</a></li>
+              <!--<li><a>Products</a></li>-->
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/articles">Articles</a>
               </li>
