--- a/src/app/front/components/news/news.component.html
+++ b/src/app/front/components/news/news.component.html
@@ -57,7 +57,7 @@
                        href="#Noteworthy"
                        aria-controls="Noteworthy"
                        role="tab"
-                       data-toggle="tab">Notewort</a>
+                       data-toggle="tab">Noteworthy</a>
                   </li>
                 </ul>
                 <!-- Tab panes -->
