--- a/src/app/front/components/footer/front-footer.component.html
+++ b/src/app/front/components/footer/front-footer.component.html
@@ -6,9 +6,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 topFooterWrapper">
           <h1 class="footerHdin">About Us</h1>
           <a href="#" class="logoWrapper"><img style="margin: 0" src="../../../../assets/images/logo.png" alt="LOGO" class="img-responsive"/></a>
-          <p class="footerPara">Lorem Ipsum is simply dummy text of the printing and typesetting Ipsum is
-            simply dummy text of the printing .Lorem Ipsum is simply dummy text of the printing and
-            typesetting Ipsum is simply dummy text of the printing .</p>
+          <p class="footerPara">RotoPros.com is a daily fantasy sports analytics platform that offers the best tools in the industry. RotoPros offers lineup optimizers, projections, daily sports content, podcasts, tools, and many premium features.</p>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 col-lg-offset-1">
           <!--<h1 class="footerHdin">Links</h1>
