--- a/src/app/front/components/sign-up/sign-up.component.html
+++ b/src/app/front/components/sign-up/sign-up.component.html
@@ -12,7 +12,7 @@
 
               <h3><span class="licnWrapper"><img src="../../../../assets/images/login_title_icn.png" alt=""
                                                  class="img-responsive"/></span><span>Sign Up</span></h3>
-              <p>Lorem Ipsum is simply dummy text of the printing and industry.</p>
+              <p>Signup for a free account today.</p>
               <div #signUpError>
                 <div class="alert alert-danger fade in" *ngIf="signUpErrors">
                   {{signUpErrors}}
