--- a/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
+++ b/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
@@ -9,7 +9,7 @@
     <section class="my-section title-container">
       <div class="row">
         <div class="col-md-6">
-          <h4 class="content-title">Lineup Optimizer</h4>
+          <h4 class="content-title">MLB Lineup Optimizer</h4>
         </div>
         <div class="col-md-6 text-right">
           <span style="padding-right: 20px">
