--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -20,7 +20,7 @@
 
       <!-- Modal Body -->
       <div class="modal-body">
-        <div class="row row30">
+        <div class="row row30" *ngIf="isLogIn">
           <div class="col-lg-12 text-center yellow-container">
             <a class="btn btn-link btn-link-back" (click)="onBtnSaveAdvFilterValueClicked()"
                [class.disabled]="!isSettingsUpdated"><img
@@ -40,7 +40,8 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="filter-range-container">
-                      <h4 class="rangeslider-value">Variability: <span id="VariabilitySliderVal">{{variabilityValue}}%</span></h4>
+                      <h4 class="rangeslider-value">Variability: <span
+                        id="VariabilitySliderVal">{{variabilityValue}}%</span></h4>
                       <input id="Variability" type="text"/>
                       <span class="slider-range slider-min">0</span><span class="slider-range slider-max">100%</span>
                     </div>
@@ -58,7 +59,8 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="filter-range-container">
-                      <h4 class="rangeslider-value">Number Of Unique Players: <span id="nupSliderVal">{{noOfUniquePlayersValue}}</span></h4>
+                      <h4 class="rangeslider-value">Number Of Unique Players: <span id="nupSliderVal">{{noOfUniquePlayersValue}}</span>
+                      </h4>
                       <input id="nup" type="text"/>
                       <span class="slider-range slider-min">1</span><span class="slider-range slider-max">5</span>
                     </div>
